Add isAvailable to SellerStock and adjust APIs
