# swagger/generated-spec.json
@@ -1495,11 +1495,11 @@
           },
           {
             "in": "query",
-            "name": "name",
+            "name": "search",
             "schema": {
               "type": "string"
             },
-            "description": "Product name for filtering"
+            "description": "Product name or SKU for filtering"
           },
           {
             "in": "query",
@@ -1527,14 +1527,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "properties": {
-                    "products": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/Product"
-                      }
-                    }
-                  }
+                  "$ref": "#/components/schemas/ProductPagination"
                 }
               }
             }
